<resources>
    <string name="app_name">My Application</string>
    <string name="title_community">Community</string>
    <string name="title_route">Route</string>
    <string name="title_home">Home</string>
    <string name="title_crimedata">Crime Data</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>