<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_route"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_route" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_crimedata"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_crimedata" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_profile" />

</menu>